lecture-3-kubernetes-control-plane/policies/kyverno/01-require-container-resources.yaml
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: require-container-resources
spec:
  validationActions:
    - Deny

  matchConstraints:
    resourceRules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - pods

  matchConditions:
    - name: exclude-system-namespaces
      expression: >-
        object.metadata.namespace != "kube-system" &&
        object.metadata.namespace != "kyverno"

  variables:
    - name: allContainers
      expression: >-
        object.spec.containers +
        object.spec.?initContainers.orValue([]) +
        object.spec.?ephemeralContainers.orValue([])

  validations:
    - message: >-
        Every container must define CPU and memory requests and limits.
      expression: >-
        variables.allContainers.all(container,
          has(container.resources) &&
          has(container.resources.requests) &&
          has(container.resources.requests.cpu) &&
          has(container.resources.requests.memory) &&
          has(container.resources.limits) &&
          has(container.resources.limits.cpu) &&
          has(container.resources.limits.memory)
        )
