lecture-3-kubernetes-control-plane/policies/kyverno/04-disallow-privileged.yaml
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: disallow-privileged
spec:
  validationActions:
    - Deny

  matchConstraints:
    resourceRules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - pods

  matchConditions:
    - name: exclude-system-namespaces
      expression: >-
        object.metadata.namespace != "kube-system" &&
        object.metadata.namespace != "kyverno" &&
        object.metadata.namespace != "obs"

  variables:
    - name: allContainers
      expression: >-
        object.spec.containers +
        object.spec.?initContainers.orValue([]) +
        object.spec.?ephemeralContainers.orValue([])

  validations:
    - message: >-
        Privileged mode is disallowed for every container.
      expression: >-
        variables.allContainers.all(container,
          container.?securityContext.?privileged.orValue(false) == false
        )
