lecture-3-kubernetes-control-plane/policies/kyverno/06-require-run-as-non-root.yaml
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: require-run-as-non-root
spec:
  validationActions:
    - Deny

  matchConstraints:
    resourceRules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - pods

  matchConditions:
    - name: exclude-system-namespaces
      expression: >-
        object.metadata.namespace != "kube-system" &&
        object.metadata.namespace != "kyverno"

  variables:
    - name: allContainers
      expression: >-
        object.spec.containers +
        object.spec.?initContainers.orValue([]) +
        object.spec.?ephemeralContainers.orValue([])

  validations:
    - message: >-
        Every container must run with runAsNonRoot set to true.
      expression: >-
        variables.allContainers.all(container,
          container.?securityContext.?runAsNonRoot.orValue(
            object.spec.?securityContext.?runAsNonRoot.orValue(false)
          ) == true
        )
