lecture-3-kubernetes-control-plane/policies/kyverno/07-disallow-privilege-escalation.yaml
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: disallow-privilege-escalation
spec:
  validationActions:
    - Deny

  matchConstraints:
    resourceRules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
          - UPDATE
        resources:
          - pods

  matchConditions:
    - name: exclude-system-namespaces
      expression: >-
        object.metadata.namespace != "kube-system" &&
        object.metadata.namespace != "kyverno"

  variables:
    - name: allContainers
      expression: >-
        object.spec.containers +
        object.spec.?initContainers.orValue([]) +
        object.spec.?ephemeralContainers.orValue([])

  validations:
    - message: >-
        Every non-privileged container must set allowPrivilegeEscalation to false.
      expression: >-
        variables.allContainers.all(container,
          container.?securityContext.?privileged.orValue(false) == true ||
          container.?securityContext.?allowPrivilegeEscalation.orValue(true) == false
        )
